# neuralssm

./: .gitignore  AUTHORS.rst  CLAUDE.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/neuralssm/: #create_exps.py#  #main.py#  .#main.py  ABC.py  __init__.py  cli.py  create_exps.py  create_tmux_env 2.zsh  density_models.py  distributions.py  error.eps  experiment_descriptor.py  experiment_results.py  experiment_runner.py  experiment_viewer.py  filters.py  layers.py  main.py  misc.py  output_utils.py  parameters.py  plot_dists_per_round.py  run_nocrash.zsh  run_viewer 2.zsh  run_viewer.zsh  sim_data.py  simulation_inference.py  ssm.py  utils.py  view_files 2.zsh
src/neuralssm/checkpoints/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
src/neuralssm/experiment_scripts/: lgssm_experiment_script.py  lvssm_experiment_script.py  sir_experiment_script.py  svssm_experiment_script.py
src/neuralssm/experiments/: lgssm_experiment_script.py  lvssm_experiment_script.py  sir_experiment_script.py  svssm_experiment_script.py
src/neuralssm/exps/: lgssm_abc_n_samples_200_10000.txt  lgssm_bpf_mcmc_num_prt_100_10000.txt  lgssm_bpf_test.txt  lgssm_e4_bpf_mcmc_num_prt_100_10000.txt  lgssm_e4_snl_test.txt  lgssm_e4_tsnl_scan_n_sample_1_500.txt  lgssm_snl_n_samples_10_10000.txt  lgssm_snl_test.txt  lgssm_tsnl_group_train_on.txt  lgssm_tsnl_scan_lag.txt  lgssm_tsnl_scan_n_rounds.txt  lgssm_tsnl_test.txt  lv_nl.txt  (+1 more)
tests/: __init__.py  test_neuralssm.py
(+213 files in other folders)
