[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralssm"
version = "0.1.0"
description = "Neural methods for learning and filtering SSMs with intractable likelihoods"
readme = "README.rst"
authors = [
  {name = "Kostas Tsampourakis", email = "kostas.tsampourakis@gmail.com"}
]
maintainers = [
  {name = "Kostas Tsampourakis", email = "kostas.tsampourakis@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/kostastsa/neuralssm/issues"
changelog = "https://github.com/kostastsa/neuralssm/blob/master/changelog.md"
homepage = "https://github.com/kostastsa/neuralssm"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

